--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
+    "antd": "^5.9.4",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "lucide": "^0.279.0",
     "lucide-react": "^0.279.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-scroll": "^1.8.9",
     "tailwind-styled-components": "^2.2.0",
     "usehooks-ts": "^2.9.1"
   },
@@ -21,6 +26,7 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-scroll": "^1.8.8",
     "autoprefixer": "latest",
     "postcss": "latest",
     "tailwindcss": "latest",
