--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.1.13",
     "antd": "^5.9.4",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lucide": "^0.279.0",
     "lucide-react": "^0.279.0",
