--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.1.13",
     "antd": "^5.9.4",
     "clsx": "^2.0.0",
+    "d3": "^7.8.5",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lucide": "^0.279.0",
@@ -24,6 +25,7 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.1",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
