--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@mui/material": "^5.14.13",
     "@nextui-org/react": "^2.1.13",
     "antd": "^5.9.4",
+    "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
+    "google-auth-library": "^9.2.0",
+    "google-spreadsheet": "^4.1.0",
     "lucide": "^0.279.0",
     "lucide-react": "^0.279.0",
     "next": "latest",
