--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.14.13",
     "@nextui-org/react": "^2.1.13",
     "antd": "^5.9.4",
+    "apexcharts": "^3.44.0",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
@@ -22,10 +23,12 @@
     "framer-motion": "^10.16.4",
     "google-auth-library": "^9.2.0",
     "google-spreadsheet": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide": "^0.279.0",
     "lucide-react": "^0.279.0",
     "next": "latest",
     "react": "latest",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "latest",
     "react-scroll": "^1.8.9",
     "tailwind-styled-components": "^2.2.0",
