--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash": "^4.17.21",
     "lucide": "^0.279.0",
     "lucide-react": "^0.279.0",
-    "next": "latest",
+    "next": "^14.0.0",
     "react": "latest",
     "react-apexcharts": "^1.4.1",
     "react-dom": "latest",
