--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "next": "^14.0.0",
     "react": "latest",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "latest",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.11.0",
     "react-scroll": "^1.8.9",
     "tailwind-styled-components": "^2.2.0",
     "usehooks-ts": "^2.9.1"
