update!: redesign home section

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^14.0.0",
     "react": "latest",
     "react-apexcharts": "^1.4.1",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "latest",
     "react-elastic-carousel": "^0.11.5",
