--- a/.github/workflows/docker-image-production.yml
+++ b/.github/workflows/docker-image-production.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["main"]
+    branches: ['main']
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ku-hackathon:latest --build-arg GOOGLE_SERVICE_ACCOUNT_EMAIL=${{secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL}} --build-arg GOOGLE_SHEET_ID=${{secrets.GOOGLE_SHEET_ID}} --build-arg GOOGLE_PRIV_KEY=${{secrets.GOOGLE_PRIV_KEY}} .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ku-hackathon:latest --build-arg GOOGLE_SERVICE_ACCOUNT_EMAIL=${{secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL}} --build-arg GOOGLE_SHEET_ISSUES=${{secrets.GOOGLE_SHEET_ISSUES}} --build-arg GOOGLE_SHEET_DEV_FORM=${{secrets.GOOGLE_SHEET_DEV_FORM}} --build-arg GOOGLE_SHEET_DESIGN_FORM=${{secrets.GOOGLE_SHEET_DESIGN_FORM}} --build-arg GOOGLE_PRIV_KEY=${{secrets.GOOGLE_PRIV_KEY}} .
       - name: Push the Docker image
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
