--- a/.github/workflows/docker-image-production.yml
+++ b/.github/workflows/docker-image-production.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build the Docker image
-        run: docker build -t ${{secrets.DOCKER_USERNAME}}/ku-hackathon:latest --build-arg GOOGLE_SERVICE_ACCOUNT_EMAIL=${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL}} --build-arg GOOGLE_SHEET_ISSUES=${{ secrets.GOOGLE_SHEET_ISSUES}} --build-arg GOOGLE_SHEET_DEV_FORM=${{ secrets.GOOGLE_SHEET_DEV_FORM}} --build-arg GOOGLE_SHEET_DESIGN_FORM=${{secrets.GOOGLE_SHEET_DESIGN_FORM}} --build-arg GOOGLE_PRIV_KEY=${{secrets.GOOGLE_PRIV_KEY}} -f ./Dockerfile .
+        run: docker build -t ${{secrets.DOCKER_USERNAME }}/ku-hackathon:latest --build-arg GOOGLE_SERVICE_ACCOUNT_EMAIL=${{secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL}} --build-arg GOOGLE_SHEET_ISSUES=${{secrets.GOOGLE_SHEET_ISSUES}} --build-arg GOOGLE_SHEET_DEV_FORM=${{secrets.GOOGLE_SHEET_DEV_FORM}} --build-arg GOOGLE_SHEET_DESIGN_FORM=${{secrets.GOOGLE_SHEET_DESIGN_FORM}} --build-arg GOOGLE_PRIV_KEY=${{secrets.GOOGLE_PRIV_KEY}} .
 
       - name: Push the Docker image
         run: |
