--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-scroll": "^1.8.9",
+    "sharp": "^0.32.6",
     "tailwind-styled-components": "^2.2.0",
     "usehooks-ts": "^2.9.1"
   },
