--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.279.0",
     "mapbox-gl": "^2.15.0",
     "next": "^14.0.0",
+    "node-cache": "^5.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-awesome-slider": "^4.1.0",
