--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "lucide": "^0.279.0",
     "lucide-react": "^0.279.0",
     "mapbox-gl": "^2.15.0",
-    "next": "^14.0.0",
+    "next": "^14.0.2",
     "node-cache": "^5.1.2",
+    "postcss-antd-fixes": "^0.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-awesome-slider": "^4.1.0",
@@ -44,6 +45,7 @@
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-scroll": "^1.8.9",
+    "swr": "^2.2.4",
     "tailwind-styled-components": "^2.2.0",
     "usehooks-ts": "^2.9.1"
   },
@@ -55,6 +57,8 @@
     "@types/react-dom": "latest",
     "@types/react-scroll": "^1.8.8",
     "autoprefixer": "latest",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2",
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
