--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "google-api-client": "^2.1.0",
