--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
-    "google-api-client": "^2.1.0",
+    "google-api-client": "^1.0.5",
     "google-auth-library": "^9.2.0",
     "google-spreadsheet": "^4.1.0",
     "googleapis": "^128.0.0",
@@ -35,6 +35,7 @@
     "mapbox-gl": "^2.15.0",
     "next": "^14.0.2",
     "node-cache": "^5.1.2",
+    "pocketbase": "^0.19.0",
     "postcss-antd-fixes": "^0.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
