--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/d3": "^7.4.1",
     "@types/leaflet": "^1.9.7",
+    "@types/lodash": "^4.14.202",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
