--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && next build",
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && next start",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -47,6 +47,7 @@
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-scroll": "^1.8.9",
+    "sharp": "^0.32.6",
     "swr": "^2.2.4",
     "tailwind-styled-components": "^2.2.0",
     "usehooks-ts": "^2.9.1"
