--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lucide": "^0.279.0",
     "lucide-react": "^0.279.0",
     "mapbox-gl": "^2.15.0",
-    "next": "^14.0.2",
+    "next": "14.0.4",
     "node-cache": "^5.1.2",
     "pocketbase": "^0.19.0",
     "postcss-antd-fixes": "^0.2.0",
