Update styles and configuration files

--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
     "@mui/material": "^5.14.13",
+    "@next/mdx": "^14.0.4",
     "@nextui-org/react": "^2.1.13",
     "@react-google-maps/api": "^2.19.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/mdx": "^2.0.10",
     "@types/react-leaflet": "^3.0.0",
     "antd": "^5.9.4",
     "apexcharts": "^3.44.0",
